--- a/app/index.html
+++ b/app/index.html
@@ -120,7 +120,88 @@
         </div>
       </div>
     </section>
+    <section class="categories-info">
+      <div class="categories-info__bg">
+      <div class="container">
+        <div class="categories-info-inner">
+        <div class="categories-info__items">
+          <div class="categories-info__item">
+            <img class="categories-info__img" src="images/categories/categories-1.jpg" alt="Shipping">
+            <h4 class="categories-info__title">Free Shipping Order $100</h4>
+            <p class="text">Lorem ipsum dolor sit amet, consectet adipiscing elit, sed do</p>
+          </div>
+          <div class="categories-info__item">
+            <img class="categories-info__img" src="images/categories/categories-2.jpg" alt="Shipping">
+            <h4 class="categories-info__title">30 Days Easy Return</h4>
+            <p class="text">Lorem ipsum dolor sit amet, consectet adipiscing elit, sed do</p>
+          </div>
+          <div class="categories-info__item">
+            <img class="categories-info__img" src="images/categories/categories-3.jpg" alt="Shipping">
+            <h4 class="categories-info__title">24/7 Customer Support</h4>
+            <p class="text ">Lorem ipsum dolor sit amet, consectet adipiscing elit, sed do</p>
+          </div>
+        </div>
+        <div class="categories">
+          <h2 class="title">TOP CATEGORIES</h2>
+          <p class=" text categories__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo tempor ut labore et dolore aliqua.</p>
+          <div class="categories__items">
+            <div class="categories-item " style="background-image: url(images/categories/item-1.jpg);">
+              <div class="categories-item__subtitle">Up To 40% Off</div>
+              <h4 class="categories-item__title">Shoes & Jewellry</h4>
+              <a class="categories__link" href="#" >EXPLORE MORE</a>
+            </div>
+            <div class="categories-item" style="background-image: url(images/categories/item-2.jpg);">
+              <div class="categories-item__subtitle">New Arrival</div>
+              <h4 class="categories-item__title">Clothes & Accessories</h4>
+              <a class="categories__link" href="#">EXPLORE MORE</a>
+            </div>
+            <div class="categories-item" style="background-image: url(images/categories/item-3.jpg);">
+              <div class="categories-item__subtitle">Trending Now</div>
+              <h4 class="categories-item__title">Men’s Fashion</h4>
+              <a class="categories__link" href="#">EXPLORE MORE</a>
+            </div>
+            <div class="categories-item" style="background-image: url(images/categories/item-4.jpg);">
+              <div class="categories-item__subtitle">Hot Collection</div>
+              <h4 class="categories-item__title">Girl’s Fashion</h4>
+              <a class="categories__link" href="#">EXPLORE MORE</a>
+            </div>
+          </div>
+        </div>
+        </div>
+      </div>
+      </div>
+    </section>
+    
+
+
+    <section class="fashion">
+      <div class="container">
+        <div class="fashion__inner">
+
+          <div class="fashion__video" style="background-image: url(images/Video-preview.jpg);">
+            <a class="fashion__video-link" data-fancybox href="https://www.youtube.com/watch?v=ScYDUm5WqCM">
+              <img src="images/play-btn.jpg.svg" alt="play-btn">
+            </a>
+          </div>
+        <div class="fashion__info">
+          <p class="fashion__subtitle">
+            Winter Collection 20% Off
+          </з>
+          <h4 class="fashion__title">
+            TRENDING FASHION
+          </h4>
+          <p class="fashion__text">
+            Lorem ipsum dolor sit amet, consectetur apiscing elit, sed do eiusmod temp incididunt ut labore et dolore magna aliqua
+            consectetur adipiscing elit, sedu do eiusmod temp indidunt ut labore et dolore magna aliqua.. Quis ipsum de ultcesm.
+            Risus commodo viverra maecenas.
+          </p>
+          <a class="fashion__btn btn" href="#">VIEW NOW</a>
+        </div>
+      </div>
+      </div>
+    </section>
   </main>
+  
 
   <footer class="footer">
     <div class="container">
