--- a/app/404.html
+++ b/app/404.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <header class="header">
+  <header class="header header--404-error">
     <div class="container">
       <div class="header__inner">
         <img class="logo" src="images/logo.png" alt="logo">
@@ -53,25 +53,21 @@
   </header>
 
   <main class="main">
-    <section class="top">
-      <div class="top-container" style="background-image: url(../images/top-bg.jpg)">
-        <div class="container">
-          <h2 class="top__title title">LOG IN</h2>
-          <div class="breadcrumbs">
-            <ul class="breadcrumbs__list">
-              <li class="breadcrumbs__item">
-                <a class="breadcrumbs__link" href="#">Home</a>
-              </li>
-              <li class="breadcrumbs__item">
-                <a class="breadcrumbs__link" href="#">Log In</a>
-              </li>
-            </ul>
+    <section class="error404">
+      <div class="container">
+        <div class="error404__inner">
+          <div class="error404__content">
+            <h2 class="error404__title">OPPS! Page Not Found!!</h2>
+            <p class="error404__text">We,re sorry but we can’t seem to find the pages you request. This might be because you have typed the web address not
+              find incorrectly.</p>
+              <a class="error404__link" href="" >BACK TO HOME</a>
+            </div>
+            <img class="error404__img" src="images/404.png" alt="error" >
           </div>
         </div>
-      </div>
-    </section>
-  </main>
-
+        </section>
+      </main>
+      
   <footer class="footer">
     <div class="container">
       <div class="footer__top">
