--- a/app/product.html
+++ b/app/product.html
@@ -70,63 +70,134 @@
         </div>
       </div>
     </section>
-    <section class="product">
+    <section class="product-page">
       <div class="container">
-        <div class="product-item">
-          <div class="product-item__inner">
-            <div class="product-item__slide product-slide">
+        <div class="product-one">
+          <div class="product-one__inner">
+            <div class="product-one__slide product-slide">
               <div class="product-slide__thumb">
                 <div class="product-slide__thumb-item">
-                  <img src="images/product/1.jpg" alt="image">
+                  <img src="images/item/item-1.jpg" alt="image">
                 </div>
                 <div class="product-slide__thumb-item">
-                  <img src="images/product/2.jpg" alt="image">
+                  <img src="images/item/item-1.jpg" alt="image">
                 </div>
                 <div class="product-slide__thumb-item">
-                  <img src="images/product/3.jpg" alt="image">
+                  <img src="images/item/item-1.jpg" alt="image">
                 </div>
                 <div class="product-slide__thumb-item">
-                  <img src="images/product/4.jpg" alt="image">
+                  <img src="images/item/item-1.jpg" alt="image">
                 </div>
               </div>
               <div class="product-slide__big">
                 <div class="product-slide__big-item">
-                  <img src="images/product/1.jpg" alt="image">
+                  <img src="images/item/item-1.jpg" alt="image">
                 </div>
                 <div class="product-slide__big-item">
-                  <img src="images/product/2.jpg" alt="image">
+                  <img src="images/item/item-1.jpg" alt="image">
                 </div>
                 <div class="product-slide__big-item">
-                  <img src="images/product/3.jpg" alt="image">
+                  <img src="images/item/item-1.jpg" alt="image">
                 </div>
                 <div class="product-slide__big-item">
-                  <img src="images/product/4.jpg" alt="image">
+                  <img src="images/item/item-1.jpg" alt="image">
                 </div>
               </div>
             </div>
-            <div class="product-item__content">
-              <h3 class="product-item__title">Emboossed Packet Backpack</h3>
-              <div class="product-item__box">
-                <div class="product-item__price-new">$19.00</div>
-                <div class="product-item__price-old">(29.00)</div>
-                <div class="product-item__star">
+            <div class="product-one__content">
+              <h3 class="product-one__title">Emboossed Packet Backpack</h3>
+              <div class="product-one__box">
+                <div class="product-one__price-new">$19.00</div>
+                <div class="product-one__price-old">(29.00)</div>
+                <div class="product-one__star">
                   <div class="star" data-rateyo-rating="4"></div>(22)
                 </div>
               </div>
-              <p class="product-item__text">
+              <p class="product-one__text">
                 <span>Review:</span>
-                Lorem ipsum dolor sit amet, consectetur adipscg elit, sed do eiusmod tempor incididunt ut laborea et dolore magna alqua.
+                Lorem ipsum dolor sit amet, consectetur adipscg elit, sed do eiusmod tempor incididunt ut laborea et
+                dolore magna alqua.
                 Quis ipsum suspendssem moa ultrices gravida.
               </p>
-              <form class="product-item__form product-filter" action="#">
-                <div class="product-filter__color"></div>
-                <div class="product-filter__size"></div>
-                <div class="product-item__info product-info">
+              <form class="product-one__form product-filter" action="#">
+                <div class="product-filter__color">
+                  <div class="product-filter__color-title">Color:
+                  </div>
+                  <label class="product-filter__color-label">
+                    <input class="product-filter__color-input" type="radio" name="color">
+                    <span class="product-filter__color-checkbox">
+                      <span style="background-color: #f49ac1"></span>
+                    </span>
+                  </label>
+                  <label class="product-filter__color-label">
+                    <input class="product-filter__color-input" type="radio" name="color">
+                    <span class="product-filter__color-checkbox">
+                      <span style="background-color: #e5e4e1"></span>
+                    </span>
+                  </label>
+                  <label class="product-filter__color-label">
+                    <input class="product-filter__color-input" type="radio" name="color">
+                    <span class="product-filter__color-checkbox">
+                      <span style="background-color: #ffbc41"></span>
+                    </span>
+                  </label>
+                  <label class="product-filter__color-label">
+                    <input class="product-filter__color-input" type="radio" name="color">
+                    <span class="product-filter__color-checkbox">
+                      <span style="background-color: #b370ff"></span>
+                    </span>
+                  </label>
+                  <label class="product-filter__color-label">
+                    <input class="product-filter__color-input" type="radio" name="color">
+                    <span class="product-filter__color-checkbox">
+                      <span style="background-color: #6fdf9e"></span>
+                    </span>
+                  </label>
+                  <label class="product-filter__color-label">
+                    <input class="product-filter__color-input" type="radio" name="color">
+                    <span class="product-filter__color-checkbox">
+                      <span style="background-color: #ff6060"></span>
+                    </span>
+                  </label>
+
+                </div>
+                <div class="product-filter__size">
+                  <div class="product-filter__size-title">
+                    Size:
+                  </div>
+                  <label class="product-filter__size-label">
+                    <input class="product-filter__size-input" type="radio" name="size">
+                    <span class="product-filter__size-checkbox">S</span>
+                  </label>
+                  <label class="product-filter__size-label">
+                    <input class="product-filter__size-input" type="radio" name="size">
+                    <span class="product-filter__size-checkbox">M</span>
+                  </label>
+                  <label class="product-filter__size-label">
+                    <input class="product-filter__size-input" type="radio" name="size">
+                    <span class="product-filter__size-checkbox">L</span>
+                  </label>
+                  <label class="product-filter__size-label">
+                    <input class="product-filter__size-input" type="radio" name="size">
+                    <span class="product-filter__size-checkbox">XS</span>
+                  </label>
+                  <label class="product-filter__size-label">
+                    <input class="product-filter__size-input" type="radio" name="size">
+                    <span class="product-filter__size-checkbox">XL</span>
+                  </label>
+                  <label class="product-filter__size-label">
+                    <input class="product-filter__size-input" type="radio" name="size">
+                    <span class="product-filter__size-checkbox">XXL</span>
+                  </label>
+
+
+                </div>
+                <div class="product-one__info product-info">
                   <ul class="product-info__list">
                     <li class="product-info__item">
                       <div class="product-info__title">SKU
-                     </div>
-                      <div class="product-info__text">11FSE7739           
+                      </div>
+                      <div class="product-info__text">11FSE7739
                       </div>
                     </li>
                     <li class="product-info__item">
@@ -139,14 +210,33 @@
                     </li>
                     <li class="product-info__item">
                       <div class="product-info__title">Share</div>
-                      <div class="product-info__text"></div>
+                      <div class="product-info__text">
+                        <a class="product-info__link" href="#">
+                          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                            width="11pt" height="17pt" viewBox="0 0 11 17" version="1.1">
+                            <g>
+                              <path
+                                d="M 9.59375 9.5625 L 10.085938 6.484375 L 7.027344 6.484375 L 7.027344 4.488281 C 7.027344 3.648438 7.453125 2.828125 8.824219 2.828125 L 10.214844 2.828125 L 10.214844 0.207031 C 10.214844 0.207031 8.953125 0 7.746094 0 C 5.230469 0 3.585938 1.472656 3.585938 4.140625 L 3.585938 6.484375 L 0.785156 6.484375 L 0.785156 9.5625 L 3.585938 9.5625 L 3.585938 17 L 7.027344 17 L 7.027344 9.5625 Z M 9.59375 9.5625 " />
+                            </g>
+                          </svg>
+                        </a>
+                        <a class="product-info__link" href="#">
+                          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                            width="17pt" height="17pt" viewBox="0 0 17 17" version="1.1">
+                            <g>
+                              <path
+                                d="M 15.253906 5.039062 C 15.261719 5.1875 15.261719 5.339844 15.261719 5.492188 C 15.261719 10.097656 11.757812 15.402344 5.351562 15.402344 C 3.375 15.402344 1.542969 14.832031 0 13.839844 C 0.28125 13.871094 0.550781 13.882812 0.839844 13.882812 C 2.46875 13.882812 3.96875 13.332031 5.167969 12.394531 C 3.636719 12.363281 2.351562 11.359375 1.910156 9.976562 C 2.125 10.011719 2.339844 10.03125 2.566406 10.03125 C 2.878906 10.03125 3.191406 9.988281 3.484375 9.914062 C 1.886719 9.589844 0.691406 8.1875 0.691406 6.492188 L 0.691406 6.449219 C 1.152344 6.710938 1.695312 6.871094 2.265625 6.894531 C 1.328125 6.265625 0.710938 5.199219 0.710938 3.992188 C 0.710938 3.34375 0.882812 2.75 1.1875 2.234375 C 2.902344 4.347656 5.480469 5.726562 8.371094 5.878906 C 8.316406 5.621094 8.285156 5.351562 8.285156 5.082031 C 8.285156 3.160156 9.835938 1.597656 11.769531 1.597656 C 12.773438 1.597656 13.675781 2.015625 14.3125 2.695312 C 15.101562 2.546875 15.855469 2.253906 16.523438 1.855469 C 16.265625 2.664062 15.714844 3.34375 14.992188 3.777344 C 15.695312 3.699219 16.375 3.503906 17 3.234375 C 16.527344 3.925781 15.933594 4.542969 15.253906 5.039062 Z M 15.253906 5.039062 " />
+                            </g>
+                          </svg>
+                        </a>
+                      </div>
                     </li>
                   </ul>
 
                 </div>
 
-                <input class="product-item__num" type="number">
-                <button class="product-item__btn" type="submit"></button>
+                <input class="product-one__item-num" type="number" value="1" min="1">
+                <button class="product-one__item-btn" type="submit">Add to cart</button>
               </form>
             </div>
           </div>
