--- a/app/contact.html
+++ b/app/contact.html
@@ -13,23 +13,28 @@
   <header class="header">
   <div class="container">
     <div class="header__inner">
+    <a href="/index.html" class="logo-link">
       <img class="logo" src="images/logo.png" alt="logo">
+    </a>
       <nav class="menu">
+      <button class="menu__btn">
+      <span></span>
+      </button>
         <ul class="menu__list">
           <li class="menu__list-item">
-            <a class="menu__list-link menu__list-link--active" href="#">HOME</a>
+            <a class="menu__list-link menu__list-link--active" href="/index.html">HOME</a>
           </li>
           <li class="menu__list-item">
-            <a class="menu__list-link" href="#">SHOP</a>
+            <a class="menu__list-link" href="/shop.html">SHOP</a>
           </li>
           <li class="menu__list-item">
-            <a class="menu__list-link" href="#">PAGE</a>
+            <a class="menu__list-link" href="/404.html">PAGE</a>
           </li>
           <li class="menu__list-item">
-            <a class="menu__list-link" href="#">BLOG</a>
+            <a class="menu__list-link" href="/blog.html">BLOG</a>
           </li>
           <li class="menu__list-item">
-            <a class="menu__list-link" href="#">CONTACT</a>
+            <a class="menu__list-link" href="/contact.html">CONTACT</a>
           </li>
         </ul>
       </nav>
@@ -116,7 +121,7 @@
               </div>
             </div>
           </div>
-
+          <div class="map__former">   
           <form class="map__form" action="#">
             <h5 class="map__form-title">Contact Form</h5>
             <div class="map__form-box">
@@ -127,6 +132,7 @@
             <textarea class="map__form-textarea" placeholder="Message here"></textarea>
             <button class="map__form-btn" type="submit">SEND MESSAGE</button>
           </form>
+          </div>
         </div>
       </div>
     </section>
