--- a/app/module/_blog/_blog.html
+++ b/app/module/_blog/_blog.html
@@ -6,7 +6,7 @@
           labore et dolore aliqua.</p>
         <div class="blog__items">
           <div class="blog__item">
-            <a class="blog__item-img__link" href="#">
+            <a class="blog__item-img__link" href="/blog-one.html">
               <img class="blog__item-img" src="images/blog/item-1.jpg" alt="blog photo">
             </a>
             <div class="blog__item-box">
@@ -28,7 +28,7 @@
             </div>
           </div>
           <div class="blog__item">
-            <a class="blog__item-img__link" href="#">
+            <a class="blog__item-img__link" href="/blog-one.html">
               <img class="blog__item-img" src="images/blog/item-2.jpg" alt="blog photo">
             </a>
             <div class="blog__item-box">
@@ -51,7 +51,7 @@
             </div>
           </div>
           <div class="blog__item">
-            <a class="blog__item-img__link" href="#">
+            <a class="blog__item-img__link" href="/blog-one.html">
               <img class="blog__item-img" src="images/blog/item-3.jpg" alt="blog photo">
             </a>
             <div class="blog__item-box">
