--- a/app/module/_fashion/_fashion.html
+++ b/app/module/_fashion/_fashion.html
@@ -3,7 +3,7 @@
         <div class="fashion__inner">
 
           <div class="fashion__video" style="background-image: url(images/Video-preview.jpg);">
-            <a class="fashion__video-link" data-fancybox href="https://www.youtube.com/watch?v=ScYDUm5WqCM">
+            <a class="fashion__video-link" data-fancybox href="https://www.youtube.com/watch?v=qx642sCF8Rk&list=PLxVexRqKs_pSs8w5AyC1KoyWo5XPffD7_&index=21">
               <img src="images/play-btn.jpg.svg" alt="play-btn">
             </a>
           </div>
