--- a/app/shop.html
+++ b/app/shop.html
@@ -13,23 +13,28 @@
  <header class="header">
   <div class="container">
     <div class="header__inner">
+    <a href="/index.html" class="logo-link">
       <img class="logo" src="images/logo.png" alt="logo">
+    </a>
       <nav class="menu">
+      <button class="menu__btn">
+      <span></span>
+      </button>
         <ul class="menu__list">
           <li class="menu__list-item">
-            <a class="menu__list-link menu__list-link--active" href="#">HOME</a>
+            <a class="menu__list-link menu__list-link--active" href="/index.html">HOME</a>
           </li>
           <li class="menu__list-item">
-            <a class="menu__list-link" href="#">SHOP</a>
+            <a class="menu__list-link" href="/shop.html">SHOP</a>
           </li>
           <li class="menu__list-item">
-            <a class="menu__list-link" href="#">PAGE</a>
+            <a class="menu__list-link" href="/404.html">PAGE</a>
           </li>
           <li class="menu__list-item">
-            <a class="menu__list-link" href="#">BLOG</a>
+            <a class="menu__list-link" href="/blog.html">BLOG</a>
           </li>
           <li class="menu__list-item">
-            <a class="menu__list-link" href="#">CONTACT</a>
+            <a class="menu__list-link" href="/contact.html">CONTACT</a>
           </li>
         </ul>
       </nav>
