--- a/app/index.html
+++ b/app/index.html
@@ -5,30 +5,35 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/index.min.css">
-  <title>Document</title>
+  <title>Marcho</title>
 </head>
 
 <body>
 <header class="header">
   <div class="container">
     <div class="header__inner">
+    <a href="/index.html" class="logo-link">
       <img class="logo" src="images/logo.png" alt="logo">
+    </a>
       <nav class="menu">
+      <button class="menu__btn">
+      <span></span>
+      </button>
         <ul class="menu__list">
           <li class="menu__list-item">
-            <a class="menu__list-link menu__list-link--active" href="#">HOME</a>
+            <a class="menu__list-link menu__list-link--active" href="/index.html">HOME</a>
           </li>
           <li class="menu__list-item">
-            <a class="menu__list-link" href="#">SHOP</a>
+            <a class="menu__list-link" href="/shop.html">SHOP</a>
           </li>
           <li class="menu__list-item">
-            <a class="menu__list-link" href="#">PAGE</a>
+            <a class="menu__list-link" href="/404.html">PAGE</a>
           </li>
           <li class="menu__list-item">
-            <a class="menu__list-link" href="#">BLOG</a>
+            <a class="menu__list-link" href="/blog.html">BLOG</a>
           </li>
           <li class="menu__list-item">
-            <a class="menu__list-link" href="#">CONTACT</a>
+            <a class="menu__list-link" href="/contact.html">CONTACT</a>
           </li>
         </ul>
       </nav>
@@ -177,7 +182,7 @@
         <div class="fashion__inner">
 
           <div class="fashion__video" style="background-image: url(images/Video-preview.jpg);">
-            <a class="fashion__video-link" data-fancybox href="https://www.youtube.com/watch?v=ScYDUm5WqCM">
+            <a class="fashion__video-link" data-fancybox href="https://www.youtube.com/watch?v=qx642sCF8Rk&list=PLxVexRqKs_pSs8w5AyC1KoyWo5XPffD7_&index=21">
               <img src="images/play-btn.jpg.svg" alt="play-btn">
             </a>
           </div>
@@ -214,7 +219,7 @@
               <div class="product-item__img-box">
                 <img class="product-item__img" src="images/product/item-1.jpg" alt="product image">
                 <div class="product-item__link-box">
-                  <a class="product-item__link" href="#">
+                  <a class="product-item__link" href="/product.html">
                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="19px"
                       height="20px">
                       <path fill-rule="evenodd" fill="rgb(41, 40, 45)"
@@ -228,7 +233,7 @@
                         d="M15.999,17.294 L14.854,4.396 C14.830,4.109 14.589,3.892 14.307,3.892 L11.953,3.892 C11.920,1.740 10.163,0.002 8.005,0.002 C5.847,0.002 4.090,1.740 4.057,3.892 L1.703,3.892 C1.417,3.892 1.180,4.109 1.156,4.396 L0.011,17.294 C0.011,17.311 0.007,17.327 0.007,17.343 C0.007,18.812 1.352,20.006 3.007,20.006 L13.003,20.006 C14.658,20.006 16.003,18.812 16.003,17.343 C16.003,17.327 16.003,17.311 15.999,17.294 L15.999,17.294 ZM8.005,1.106 C9.554,1.106 10.817,2.350 10.849,3.892 L5.161,3.892 C5.193,2.350 6.456,1.106 8.005,1.106 L8.005,1.106 ZM13.003,18.902 L3.007,18.902 C1.969,18.902 1.127,18.215 1.111,17.368 L2.206,5.001 L4.053,5.001 L4.053,6.678 C4.053,6.985 4.298,7.230 4.605,7.230 C4.911,7.230 5.157,6.985 5.157,6.678 L5.157,5.001 L10.849,5.001 L10.849,6.678 C10.849,6.985 11.095,7.230 11.401,7.230 C11.708,7.230 11.953,6.985 11.953,6.678 L11.953,5.001 L13.800,5.001 L14.899,17.368 C14.883,18.215 14.037,18.902 13.003,18.902 L13.003,18.902 Z" />
                     </svg>
                   </a>
-                  <a class="product-item__link" href="#">
+                  <a class="product-item__link" href="/product.html">
                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="23px"
                       height="20px">
                       <path fill-rule="evenodd" fill="rgb(41, 40, 45)"
@@ -240,8 +245,8 @@
               <div class="star" data-rateyo-rating="4"></div>
               <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
               <div class="product-item__price">
-                <div class="product-item__new-price">$34.00</div>
-                <div class="product-item__old-price">$27.00</div>
+                <div class="product-item__price-new">$34.00</div>
+                <div class="product-item__price-old">$27.00</div>
               </div>
             </div>
 
@@ -249,7 +254,7 @@
             <div class="product-item__img-box">
               <img class="product-item__img" src="images/product/item-2.jpg" alt="product image">
               <div class="product-item__link-box">
-                <a class="product-item__link" href="#">
+                <a class="product-item__link" href="/product.html">
                   <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="19px"
                     height="20px">
                     <path fill-rule="evenodd" fill="rgb(41, 40, 45)"
@@ -263,7 +268,7 @@
                       d="M15.999,17.294 L14.854,4.396 C14.830,4.109 14.589,3.892 14.307,3.892 L11.953,3.892 C11.920,1.740 10.163,0.002 8.005,0.002 C5.847,0.002 4.090,1.740 4.057,3.892 L1.703,3.892 C1.417,3.892 1.180,4.109 1.156,4.396 L0.011,17.294 C0.011,17.311 0.007,17.327 0.007,17.343 C0.007,18.812 1.352,20.006 3.007,20.006 L13.003,20.006 C14.658,20.006 16.003,18.812 16.003,17.343 C16.003,17.327 16.003,17.311 15.999,17.294 L15.999,17.294 ZM8.005,1.106 C9.554,1.106 10.817,2.350 10.849,3.892 L5.161,3.892 C5.193,2.350 6.456,1.106 8.005,1.106 L8.005,1.106 ZM13.003,18.902 L3.007,18.902 C1.969,18.902 1.127,18.215 1.111,17.368 L2.206,5.001 L4.053,5.001 L4.053,6.678 C4.053,6.985 4.298,7.230 4.605,7.230 C4.911,7.230 5.157,6.985 5.157,6.678 L5.157,5.001 L10.849,5.001 L10.849,6.678 C10.849,6.985 11.095,7.230 11.401,7.230 C11.708,7.230 11.953,6.985 11.953,6.678 L11.953,5.001 L13.800,5.001 L14.899,17.368 C14.883,18.215 14.037,18.902 13.003,18.902 L13.003,18.902 Z" />
                   </svg>
                 </a>
-                <a class="product-item__link" href="#">
+                <a class="product-item__link" href="/product.html">
                   <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="23px"
                     height="20px">
                     <path fill-rule="evenodd" fill="rgb(41, 40, 45)"
@@ -275,15 +280,15 @@
             <div class="star" data-rateyo-rating="4"></div>
             <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
             <div class="product-item__price">
-              <div class="product-item__new-price">$34.00</div>
-              <div class="product-item__old-price">$27.00</div>
+              <div class="product-item__price-new">$34.00</div>
+              <div class="product-item__price-old">$27.00</div>
             </div>
           </div>
           <div class="product-item">
             <div class="product-item__img-box">
               <img class="product-item__img" src="images/product/item-3.jpg" alt="product image">
               <div class="product-item__link-box">
-                <a class="product-item__link" href="#">
+                <a class="product-item__link" href="/product.html">
                   <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="19px"
                     height="20px">
                     <path fill-rule="evenodd" fill="rgb(41, 40, 45)"
@@ -297,7 +302,7 @@
                       d="M15.999,17.294 L14.854,4.396 C14.830,4.109 14.589,3.892 14.307,3.892 L11.953,3.892 C11.920,1.740 10.163,0.002 8.005,0.002 C5.847,0.002 4.090,1.740 4.057,3.892 L1.703,3.892 C1.417,3.892 1.180,4.109 1.156,4.396 L0.011,17.294 C0.011,17.311 0.007,17.327 0.007,17.343 C0.007,18.812 1.352,20.006 3.007,20.006 L13.003,20.006 C14.658,20.006 16.003,18.812 16.003,17.343 C16.003,17.327 16.003,17.311 15.999,17.294 L15.999,17.294 ZM8.005,1.106 C9.554,1.106 10.817,2.350 10.849,3.892 L5.161,3.892 C5.193,2.350 6.456,1.106 8.005,1.106 L8.005,1.106 ZM13.003,18.902 L3.007,18.902 C1.969,18.902 1.127,18.215 1.111,17.368 L2.206,5.001 L4.053,5.001 L4.053,6.678 C4.053,6.985 4.298,7.230 4.605,7.230 C4.911,7.230 5.157,6.985 5.157,6.678 L5.157,5.001 L10.849,5.001 L10.849,6.678 C10.849,6.985 11.095,7.230 11.401,7.230 C11.708,7.230 11.953,6.985 11.953,6.678 L11.953,5.001 L13.800,5.001 L14.899,17.368 C14.883,18.215 14.037,18.902 13.003,18.902 L13.003,18.902 Z" />
                   </svg>
                 </a>
-                <a class="product-item__link" href="#">
+                <a class="product-item__link" href="/product.html">
                   <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="23px"
                     height="20px">
                     <path fill-rule="evenodd" fill="rgb(41, 40, 45)"
@@ -309,15 +314,15 @@
             <div class="star" data-rateyo-rating="3.7"></div>
             <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
             <div class="product-item__price">
-              <div class="product-item__new-price">$34.00</div>
-              <div class="product-item__old-price">$27.00</div>
+              <div class="product-item__price-new">$34.00</div>
+              <div class="product-item__price-old">$27.00</div>
             </div>
           </div>
           <div class="product-item  product-item--sale">
             <div class="product-item__img-box">
               <img class="product-item__img" src="images/product/item-4.jpg" alt="product image">
               <div class="product-item__link-box">
-                <a class="product-item__link" href="#">
+                <a class="product-item__link" href="/product.html">
                   <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="19px"
                     height="20px">
                     <path fill-rule="evenodd" fill="rgb(41, 40, 45)"
@@ -331,7 +336,7 @@
                       d="M15.999,17.294 L14.854,4.396 C14.830,4.109 14.589,3.892 14.307,3.892 L11.953,3.892 C11.920,1.740 10.163,0.002 8.005,0.002 C5.847,0.002 4.090,1.740 4.057,3.892 L1.703,3.892 C1.417,3.892 1.180,4.109 1.156,4.396 L0.011,17.294 C0.011,17.311 0.007,17.327 0.007,17.343 C0.007,18.812 1.352,20.006 3.007,20.006 L13.003,20.006 C14.658,20.006 16.003,18.812 16.003,17.343 C16.003,17.327 16.003,17.311 15.999,17.294 L15.999,17.294 ZM8.005,1.106 C9.554,1.106 10.817,2.350 10.849,3.892 L5.161,3.892 C5.193,2.350 6.456,1.106 8.005,1.106 L8.005,1.106 ZM13.003,18.902 L3.007,18.902 C1.969,18.902 1.127,18.215 1.111,17.368 L2.206,5.001 L4.053,5.001 L4.053,6.678 C4.053,6.985 4.298,7.230 4.605,7.230 C4.911,7.230 5.157,6.985 5.157,6.678 L5.157,5.001 L10.849,5.001 L10.849,6.678 C10.849,6.985 11.095,7.230 11.401,7.230 C11.708,7.230 11.953,6.985 11.953,6.678 L11.953,5.001 L13.800,5.001 L14.899,17.368 C14.883,18.215 14.037,18.902 13.003,18.902 L13.003,18.902 Z" />
                   </svg>
                 </a>
-                <a class="product-item__link" href="#">
+                <a class="product-item__link" href="/product.html">
                   <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="23px"
                     height="20px">
                     <path fill-rule="evenodd" fill="rgb(41, 40, 45)"
@@ -343,15 +348,15 @@
             <div class="star" data-rateyo-rating="5"></div>
             <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
             <div class="product-item__price">
-              <div class="product-item__new-price">$34.00</div>
-              <div class="product-item__old-price">$27.00</div>
+              <div class="product-item__price-new">$34.00</div>
+              <div class="product-item__price-old">$27.00</div>
             </div>
           </div>
           <div class="product-item">
             <div class="product-item__img-box">
               <img class="product-item__img" src="images/product/item-5.jpg" alt="product image">
               <div class="product-item__link-box">
-                <a class="product-item__link" href="#">
+                <a class="product-item__link" href="/product.html">
                   <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="19px"
                     height="20px">
                     <path fill-rule="evenodd" fill="rgb(41, 40, 45)"
@@ -365,7 +370,7 @@
                       d="M15.999,17.294 L14.854,4.396 C14.830,4.109 14.589,3.892 14.307,3.892 L11.953,3.892 C11.920,1.740 10.163,0.002 8.005,0.002 C5.847,0.002 4.090,1.740 4.057,3.892 L1.703,3.892 C1.417,3.892 1.180,4.109 1.156,4.396 L0.011,17.294 C0.011,17.311 0.007,17.327 0.007,17.343 C0.007,18.812 1.352,20.006 3.007,20.006 L13.003,20.006 C14.658,20.006 16.003,18.812 16.003,17.343 C16.003,17.327 16.003,17.311 15.999,17.294 L15.999,17.294 ZM8.005,1.106 C9.554,1.106 10.817,2.350 10.849,3.892 L5.161,3.892 C5.193,2.350 6.456,1.106 8.005,1.106 L8.005,1.106 ZM13.003,18.902 L3.007,18.902 C1.969,18.902 1.127,18.215 1.111,17.368 L2.206,5.001 L4.053,5.001 L4.053,6.678 C4.053,6.985 4.298,7.230 4.605,7.230 C4.911,7.230 5.157,6.985 5.157,6.678 L5.157,5.001 L10.849,5.001 L10.849,6.678 C10.849,6.985 11.095,7.230 11.401,7.230 C11.708,7.230 11.953,6.985 11.953,6.678 L11.953,5.001 L13.800,5.001 L14.899,17.368 C14.883,18.215 14.037,18.902 13.003,18.902 L13.003,18.902 Z" />
                   </svg>
                 </a>
-                <a class="product-item__link" href="#">
+                <a class="product-item__link" href="/product.html">
                   <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="23px"
                     height="20px">
                     <path fill-rule="evenodd" fill="rgb(41, 40, 45)"
@@ -377,15 +382,15 @@
             <div class="star" data-rateyo-rating="4"></div>
             <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
             <div class="product-item__price">
-              <div class="product-item__new-price">$34.00</div>
-              <div class="product-item__old-price">$27.00</div>
+              <div class="product-item__price-new">$34.00</div>
+              <div class="product-item__price-old">$27.00</div>
             </div>
           </div>
           <div class="product-item product-item--sale">
             <div class="product-item__img-box">
               <img class="product-item__img" src="images/product/item-6.jpg" alt="product image">
               <div class="product-item__link-box">
-                <a class="product-item__link" href="#">
+                <a class="product-item__link" href="/product.html">
                   <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="19px"
                     height="20px">
                     <path fill-rule="evenodd" fill="rgb(41, 40, 45)"
@@ -399,7 +404,7 @@
                       d="M15.999,17.294 L14.854,4.396 C14.830,4.109 14.589,3.892 14.307,3.892 L11.953,3.892 C11.920,1.740 10.163,0.002 8.005,0.002 C5.847,0.002 4.090,1.740 4.057,3.892 L1.703,3.892 C1.417,3.892 1.180,4.109 1.156,4.396 L0.011,17.294 C0.011,17.311 0.007,17.327 0.007,17.343 C0.007,18.812 1.352,20.006 3.007,20.006 L13.003,20.006 C14.658,20.006 16.003,18.812 16.003,17.343 C16.003,17.327 16.003,17.311 15.999,17.294 L15.999,17.294 ZM8.005,1.106 C9.554,1.106 10.817,2.350 10.849,3.892 L5.161,3.892 C5.193,2.350 6.456,1.106 8.005,1.106 L8.005,1.106 ZM13.003,18.902 L3.007,18.902 C1.969,18.902 1.127,18.215 1.111,17.368 L2.206,5.001 L4.053,5.001 L4.053,6.678 C4.053,6.985 4.298,7.230 4.605,7.230 C4.911,7.230 5.157,6.985 5.157,6.678 L5.157,5.001 L10.849,5.001 L10.849,6.678 C10.849,6.985 11.095,7.230 11.401,7.230 C11.708,7.230 11.953,6.985 11.953,6.678 L11.953,5.001 L13.800,5.001 L14.899,17.368 C14.883,18.215 14.037,18.902 13.003,18.902 L13.003,18.902 Z" />
                   </svg>
                 </a>
-                <a class="product-item__link" href="#">
+                <a class="product-item__link" href="/product.html">
                   <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="23px"
                     height="20px">
                     <path fill-rule="evenodd" fill="rgb(41, 40, 45)"
@@ -411,8 +416,8 @@
             <div class="star" data-rateyo-rating="4.5"></div>
             <h4 class="product-item__title">White Polo Men’s T-Shirt</h4>
             <div class="product-item__price">
-              <div class="product-item__new-price">$34.00</div>
-              <div class="product-item__old-price">$27.00</div>
+              <div class="product-item__price-new">$34.00</div>
+              <div class="product-item__price-old">$27.00</div>
             </div>
           </div>
         </div>
@@ -427,7 +432,7 @@
           <div class="promo__subtitle">Style Fashion
           </div>
           <h3 class="title">DEAL OF THE DAY</h3>
-          <div class="promo__clock" data-time="'2021-02-25'">
+          <div class="promo__clock" data-time="'2021-03-25'">
             <div class="promo__clock-item">
               <span class="promo__days"></span>
               <div class="promo__text">Days</div>
@@ -477,7 +482,7 @@
           labore et dolore aliqua.</p>
         <div class="blog__items">
           <div class="blog__item">
-            <a class="blog__item-img__link" href="#">
+            <a class="blog__item-img__link" href="/blog-one.html">
               <img class="blog__item-img" src="images/blog/item-1.jpg" alt="blog photo">
             </a>
             <div class="blog__item-box">
@@ -499,7 +504,7 @@
             </div>
           </div>
           <div class="blog__item">
-            <a class="blog__item-img__link" href="#">
+            <a class="blog__item-img__link" href="/blog-one.html">
               <img class="blog__item-img" src="images/blog/item-2.jpg" alt="blog photo">
             </a>
             <div class="blog__item-box">
@@ -522,7 +527,7 @@
             </div>
           </div>
           <div class="blog__item">
-            <a class="blog__item-img__link" href="#">
+            <a class="blog__item-img__link" href="/blog-one.html">
               <img class="blog__item-img" src="images/blog/item-3.jpg" alt="blog photo">
             </a>
             <div class="blog__item-box">
@@ -545,7 +550,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section>  
 
 
 
